[package]
name = "kult"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"

[dependencies]
#--- Gui ---#
eframe = "0.25.0"
egui = "0.25.0"

#--- Password Generator ---#
passwords = "3.1.16"
getrandom = {version = "0.2.12", features = ["js"]}

#--- Unit Converter ---#
uom = "0.35.0"
num = "0.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[build-dependencies]
fs_extra = "1.3.0"
